create registration model to register athletes for competitions and fixes and refactoring